--- a/MediaPlayer/MainPage.xaml
+++ b/MediaPlayer/MainPage.xaml
@@ -5,9 +5,43 @@
     xmlns:local="using:MediaPlayer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Width="1000">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="100" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
+        <Button 
+            x:Name="Button_GetFile" 
+            Width="200" Height="100" 
+            Content="读取文件" 
+            FontSize="36" 
+            Click="Button_GetFile_Click"  
+            Grid.Column="1" Grid.Row="2" 
+            HorizontalAlignment="Left"/>
+        <TextBlock Name="Head" 
+            Grid.Column="0" Grid.Row="0" Width="200" Height="100">
+            Player
+        </TextBlock>
+        <Grid Grid.Column="1" Grid.Row="1">
 
+            <MediaElement 
+                Name="Player" 
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Bottom" 
+                AutoPlay="True" 
+                AreTransportControlsEnabled="True" 
+                Height="auto" />
+
+        </Grid>
     </Grid>
+
 </Page>
+
